--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ng-select/ng-select": "^10.0.4",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
+    "dayjs": "^1.11.7",
     "kyo-angular-ui-lib": "^0.0.37",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
